exports[`TableHead React component Renders Bordered correctly 1`] = `
<thead
  className="tableHeader">
  <tr
    className="tableRow">
    <th
      className="tableTitle border"
      colSpan={1}>
      Table Title 1
    </th>
    <th
      className="tableTitle border"
      colSpan={1}>
      Table Title 2
    </th>
  </tr>
</thead>
`;

exports[`TableHead React component Renders Un-bordered correctly 1`] = `
<thead
  className="tableHeader">
  <tr
    className="tableRow">
    <th
      className="tableTitle"
      colSpan={1}>
      Table Title 1
    </th>
    <th
      className="tableTitle"
      colSpan={1}>
      Table Title 2
    </th>
  </tr>
</thead>
`;
